fix app deployment

--- a/deploy/django.yaml
+++ b/deploy/django.yaml
@@ -40,41 +40,57 @@ spec:
     matchLabels:
       app: django
       tier: app
-    strategy:
+  strategy:
       type: Recreate
-    template:
-      metadata:
-        labels:
-          app: django
-          tier: app
-      spec:
-        volumes:
-          - name: django-app-data
-            persistentVolumeClaim:
-              claimName: django-app-pvc
-        containers:
-          - images: django-app:latest
-            imagePullPolicy: Never
-            name: app
-            volumeMounts:
-              - name: django-app-data
-                mountPath: /vol/web
-            env:
-              - name: DB_HOST
-                value: django-postgres
-              - name: DB_NAME
-                value: djangodb
-              - name: DB_USER
-                value: djangouser
-              - name: DB_PASS
-                valueFrom:
-                  secretKeyRef:
-                    name: db-password
-                    key: password
-              - name: SECRET_KEY
-                valueFrom:
-                  secretKeyRef:
-                    name: django
-                    key: secret                    
-              - name: ALLOWED_HOSTS
-                value: '127.0.0.1,localhost'
+  template:
+    metadata:
+      labels:
+        app: django
+        tier: app
+    spec:
+      volumes:
+        - name: django-app-data
+          persistentVolumeClaim:
+            claimName: django-app-pvc
+      containers:
+        - images: django-app:latest
+          imagePullPolicy: Never
+          name: app
+          volumeMounts:
+            - name: django-app-data
+              mountPath: /vol/web
+          env:
+            - name: DB_HOST
+              value: django-postgres
+            - name: DB_NAME
+              value: djangodb
+            - name: DB_USER
+              value: djangouser
+            - name: DB_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: db-password
+                  key: password
+            - name: SECRET_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: django
+                  key: secret                    
+            - name: ALLOWED_HOSTS
+              value: '127.0.0.1,localhost'
+        - images: django-proxy:latest
+          imagePullPolicy: Never
+          name: proxy
+          ports:
+            - containerPort: 8000
+              name: proxy
+          volumeMounts:
+            - name: django-app-data
+              mountPath: /vol/web
+          env:
+            - name: APP_HOST
+              value: '127.0.0.1'
+            - name: APP_PORT
+              value: '8080'
+            - name: LISTEN_PORT
+              value: '8000'
